--- a/offset.html
+++ b/offset.html
@@ -90,7 +90,7 @@
 					<img src="http://placehold.it/350x150">
 			</div>
 		</div>
-
+<div class="clearfix visible-lg"></div>
 
 	</div> <!-- close container -->
 
