--- a/index.html
+++ b/index.html
@@ -3,14 +3,79 @@
 <head>
 	<title>Thumbnail Gallery in Bootstrap</title>
 
-	<!-- include bootstrap from the CDN from the website -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+<!-- jQuery CDN -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 
-	<!-- make sure to link below bootstrap to override -->
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+<!-- Latest compiled and minified JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+
+<!-- Isotope minified CDN -->
+<script src="https://npmcdn.com/isotope-layout@3.0/dist/isotope.pkgd.min.js"></script>
+
+<script src="js/script.js" type="text/javascript"></script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+<link rel="stylesheet" type="text/css" href="css/style.css">
 
 </head>
 <body>
+
+	<nav class="navbar navbar-inverse navbar-fixed-top">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse""#bs-example-navbar-collapse-1"  se">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Travelista</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Photos<span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Blog</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Locations <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">South America</a></li>
+            <li><a href="#">Europe</a></li>
+            <li><a href="#">Asia</a></li>
+            <li><a href="#">Middle Wast</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">India</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">And More...</a></li>
+          </ul>
+        </li>
+      </ul>
+      <form class="navbar-form navbar-left">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 	
 	<!-- page container -->
 	<div class="container">
@@ -26,55 +91,67 @@
 		<div class="row">
 			<!-- make a gellery, each item should be 3 columns wide -->
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<img src="http://placehold.it/350x150">
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
 			</div>
-		</div> <!-- close gallery images -->
+		</div>
 
+		</div> <!-- close gallery images -->
+		<!-- Modal -->
+		<div class="modal fade" id="changeIDForEach" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+		  <div class="modal-dialog" role="dialogue">
+		    <div class="modal-content">
+		      <div class="modal-body">
+		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+		        <img src="" class="imagepreview" style="width: 100%;" >
+		      </div>
+		      </div>
+		    </div>
+		  </div>
 
 	</div> <!-- close container -->
 
