HTML  and jQuery changes made in attempt to create popup

--- a/index.html
+++ b/index.html
@@ -91,52 +91,52 @@
 		<div class="row">
 			<!-- make a gellery, each item should be 3 columns wide -->
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
 		</div>
 
@@ -146,8 +146,8 @@
 		  <div class="modal-dialog" role="dialogue">
 		    <div class="modal-content">
 		      <div class="modal-body">
-		        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-		        <img src="" class="imagepreview" style="width: 100%;" >
+		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+		        <img src="" class="imagepreview" style="width: 100%;"> 
 		      </div>
 		      </div>
 		    </div>
