--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Thumbnail Gallery in Bootstrap</title>
+	<title>Thumbnail Travel Gallery in Bootstrap</title>
 
 <!-- jQuery CDN -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
@@ -22,11 +22,11 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-inverse navbar-fixed-top">
+<nav class="navbar navbar-inverse navbar-fixed-top">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse""#bs-example-navbar-collapse-1"  se">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -84,14 +84,17 @@
 		<div class="row">
 			<!-- bootstrap column -->
 			<div class="col-md-12">
-				<h1 class="text-center">Thumbnail Gallery</h1>
+				<h1 class="text-center">Thumbnail Travel Gallery</h1>
 			</div>
 		</div>
 
-		<div class="row">
-			<!-- make a gellery, each item should be 3 columns wide -->
+		<div class="row"> <!-- open image gallery -->
+			<!-- make a gallery, each item should be 3 columns wide -->
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
+				<a href="#" class="popup"><img data-toggle="modal" src="images/20151130_111400.jpg" class="img-responsive"></a>
+			</div>
+			<div class="col-xs-6 col-md-4 col-lg-3 pic">
+				<a href="#" class="popup"><img data-toggle="modal" src="images/DSC00245.jpg" class="img-responsive"></a>
 			</div>
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
 				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
@@ -135,25 +138,30 @@
 			<div class="col-xs-6 col-md-4 col-lg-3 pic">
 				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
 			</div>
-			<div class="col-xs-6 col-md-4 col-lg-3 pic">
-				<a href="#" class="popup"><img data-toggle="modal" src="http://placehold.it/350x150" class="img-responsive"></a>
-			</div>
-		</div>
 
-		</div> <!-- close gallery images -->
 		<!-- Modal -->
-		<div class="modal fade" id="changeIDForEach" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-		  <div class="modal-dialog" role="dialogue">
-		    <div class="modal-content">
+		<div class="modal fade" id="changeIDForEach" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		  <div class="modal-dialog" data-dismiss="modal">
+		    <div class="modal-content"  >              
 		      <div class="modal-body">
-		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-		        <img src="" class="imagepreview" style="width: 100%;"> 
+		      	<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+
+		        <img src="" class="imagepreview" style="width: 100%;" >
 		      </div>
+		      	<div class="modal-footer">
+          <div class="col-xs-12">
+               <p class="text-left">1. line of description<br>2. line of description</p>
 		      </div>
 		    </div>
 		  </div>
 
+		</div> <!-- close gallery images -->
+
+		
+
 	</div> <!-- close container -->
+
+
 
 
 </body>
